; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_licence.c_licence_process_authreq.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_licence.c_licence_process_authreq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32, i32 }

@LICENCE_TOKEN_SIZE = common dso_local global i32 0, align 4
@LICENCE_HWID_SIZE = common dso_local global i32 0, align 4
@LICENCE_SIGNATURE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i32)* @licence_process_authreq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @licence_process_authreq(%struct.TYPE_7__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  store i32 %1, i32* %4, align 4
  %15 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %7, align 8
  %18 = alloca i32, i64 %16, align 16
  store i64 %16, i64* %8, align 8
  %19 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %20 = zext i32 %19 to i64
  %21 = alloca i32, i64 %20, align 16
  store i64 %20, i64* %9, align 8
  %22 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %23 = zext i32 %22 to i64
  %24 = alloca i32, i64 %23, align 16
  store i64 %23, i64* %10, align 8
  %25 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %26 = zext i32 %25 to i64
  %27 = alloca i32, i64 %26, align 16
  store i64 %26, i64* %11, align 8
  %28 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %29 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %30 = add nsw i32 %28, %29
  %31 = zext i32 %30 to i64
  %32 = alloca i32, i64 %31, align 16
  store i64 %31, i64* %12, align 8
  %33 = load i32, i32* @LICENCE_SIGNATURE_SIZE, align 4
  %34 = zext i32 %33 to i64
  %35 = alloca i32, i64 %34, align 16
  store i64 %34, i64* %13, align 8
  %36 = load i32, i32* %4, align 4
  %37 = call i32 @licence_parse_authreq(i32 %36, i32** %5, i32** %6)
  %38 = load i32*, i32** %5, align 8
  %39 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %40 = call i32 @memcpy(i32* %18, i32* %38, i32 %39)
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @RC4_set_key(i32* %14, i32 16, i32 %44)
  %46 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %47 = load i32*, i32** %5, align 8
  %48 = call i32 @RC4(i32* %14, i32 %46, i32* %47, i32* %21)
  %49 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %50 = call i32 @licence_generate_hwid(%struct.TYPE_7__* %49, i32* %24)
  %51 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %52 = call i32 @memcpy(i32* %32, i32* %21, i32 %51)
  %53 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i32, i32* %32, i64 %54
  %56 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %57 = call i32 @memcpy(i32* %55, i32* %24, i32 %56)
  %58 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %59 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %58, i32 0, i32 0
  %60 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 4
  %62 = mul nuw i64 4, %31
  %63 = trunc i64 %62 to i32
  %64 = call i32 @sec_sign(i32* %35, i32 16, i32 %61, i32 16, i32* %32, i32 %63)
  %65 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %66 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %65, i32 0, i32 0
  %67 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %66, i32 0, i32 0
  %68 = load i32, i32* %67, align 4
  %69 = call i32 @RC4_set_key(i32* %14, i32 16, i32 %68)
  %70 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %71 = call i32 @RC4(i32* %14, i32 %70, i32* %24, i32* %27)
  %72 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %73 = call i32 @licence_send_authresp(%struct.TYPE_7__* %72, i32* %18, i32* %27, i32* %35)
  %74 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %74)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @licence_parse_authreq(i32, i32**, i32**) #2

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i32 @RC4_set_key(i32*, i32, i32) #2

declare dso_local i32 @RC4(i32*, i32, i32*, i32*) #2

declare dso_local i32 @licence_generate_hwid(%struct.TYPE_7__*, i32*) #2

declare dso_local i32 @sec_sign(i32*, i32, i32, i32, i32*, i32) #2

declare dso_local i32 @licence_send_authresp(%struct.TYPE_7__*, i32*, i32*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
